Added new swagger
